NEXT-1423 - Rename Collector

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.less
@@ -7,6 +7,8 @@
     .sw-field__suffix {
       border: none;
       background: none;
+      padding-top: 11px;
+      padding-bottom: 0;
     }
   }
 
