--- a/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
@@ -38,7 +38,7 @@
                                                 </span>
                                             {% endblock %}
                                         </template>
-                                        <template slot="dismiss_icon">
+                                        <template slot="dismiss-icon">
                                             <sw-icon name="small-default-x-line-medium"
                                                      :class="{ 'sw-select__item-is--default': (selection.id === defaultItemId) }">
                                             </sw-icon>
