--- a/Resources/administration/src/app/component/form/sw-label/sw-label.less
+++ b/Resources/administration/src/app/component/form/sw-label/sw-label.less
@@ -5,50 +5,50 @@
 @sw-label-item-color-text:       @color-gutenberg;
 
 .sw-label {
-  display: block;
-  position: relative;
-  margin-right: 6px;
-  margin-bottom: 6px;
-  padding: 4px 12px 4px 12px;
-  line-height: 22px;
-  font-size: 13px;
-  background: @sw-label-item-color-background;
-  border-radius: @sw-label-border-radius;
-  color: @sw-label-item-color-text;
-  flex-shrink: 0;
-  cursor: default;
-  border: 1px solid transparent;
-
-  &:hover {
-    background: darken(@sw-label-item-color-background, 3%);
-  }
-
-  &.is--dismiss-able {
-    padding-right: 40px;
-  }
-
-  .sw-label__dismiss {
     display: inline-block;
-    position: absolute;
-    width: 35px;
-    height: 100%;
-    padding: 4px 10px;
-    right: 0;
-    top: 0;
+    position: relative;
+    margin-right: 6px;
+    margin-bottom: 6px;
+    padding: 4px 12px 4px 12px;
+    line-height: 22px;
+    font-size: 13px;
+    background: @sw-label-item-color-background;
+    border-radius: @sw-label-border-radius;
     color: @sw-label-item-color-text;
-    font-size: 14px;
-    text-align: center;
-    background: 0 none;
-    border: 0 none;
-    cursor: pointer;
-    text-decoration: none;
-    line-height: 0;
-    font-weight: bold;
-    outline: none;
+    flex-shrink: 0;
+    cursor: default;
+    border: 1px solid transparent;
 
-    .sw-icon {
-      width: 12px;
-      height: 12px;
+    &:hover {
+        background: darken(@sw-label-item-color-background, 3%);
     }
-  }
+
+    &.is--dismiss-able {
+        padding-right: 40px;
+    }
+
+    .sw-label__dismiss {
+        display: inline-block;
+        position: absolute;
+        width: 35px;
+        height: 100%;
+        padding: 4px 10px;
+        right: 0;
+        top: 0;
+        color: @sw-label-item-color-text;
+        font-size: 14px;
+        text-align: center;
+        background: 0 none;
+        border: 0 none;
+        cursor: pointer;
+        text-decoration: none;
+        line-height: 0;
+        font-weight: bold;
+        outline: none;
+
+        .sw-icon {
+            width: 12px;
+            height: 12px;
+        }
+    }
 }
