NEXT-1319 - Apply review fixes

--- a/Resources/administration/src/app/component/base/sw-property-assignment/sw-property-assignment.html.twig
+++ b/Resources/administration/src/app/component/base/sw-property-assignment/sw-property-assignment.html.twig
@@ -2,14 +2,14 @@
 
     <sw-property-search ref="searchField" :collapsible="false" :overlay="false" :options="options" @sw-property-search-option-selected="onSelectOption"/>
 
-    <sw-grid class="sw-property-assignment__grid" ref="grid" :selectable="false" :items="groups" :isFullpage="false" table>
+    <sw-grid class="sw-property-assignment__grid" :selectable="false" :items="groups" :isFullpage="false" table>
         <template slot="columns" slot-scope="{ item }">
-            <sw-grid-column flex="200px" dataIndex="group.name" label="Eigenschaft">
+            <sw-grid-column flex="200px" dataIndex="group.name" :label="$tc('sw-property-assignment.columnGroup')">
                 {{ item.group.name }}
             </sw-grid-column>
 
-            <sw-grid-column dataIndex="options" label="Optionen" flex="minmax(100px, 1fr)" class="sw-property-assignment__grid_option_column">
-                <div class="sw-property-assignment__grid_option_item" v-for="(option, index) in item.options" :key="option.id">
+            <sw-grid-column dataIndex="options" :label="$tc('sw-property-assignment.columnOptions')" flex="minmax(100px, 1fr)" class="sw-property-assignment__grid_option_column">
+                <div v-for="(option, index) in item.options" :key="option.id" class="sw-property-assignment__grid_option_item">
                     <span class="sw-property-assignment__grid_option_item_value">{{ option.name }}</span><span class="sw-property-assignment__grid_option_item_delete" @click="deleteOption(option)"><sw-icon name="default-basic-x-line" size="14" /></span>
                 </div>
             </sw-grid-column>
