--- a/Resources/administration/src/app/component/grid/sw-grid/sw-grid.less
+++ b/Resources/administration/src/app/component/grid/sw-grid/sw-grid.less
@@ -138,4 +138,13 @@
         background: @sw-grid-item-color-background;
         border-top: 1px solid @sw-grid-item-color-border;
     }
+
+    .sw-grid__cell-content {
+        .sw-media-field {
+            margin-bottom: 0;
+        }
+        .sw-media-field-picker .sw-simple-search-field {
+            margin-bottom: 15px;
+        }
+    }
 }
