NEXT-1456 - Added category splitview

--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
@@ -71,7 +71,10 @@
         {% endblock %}
 
         {% block sw_page_content %}
-            <div class="sw-page__content" ref="swPageContent">
+            <div class="sw-page__content" ref="swPageContent" :class="{ 'is--split' : hasAdditionalSlot }">
+                <slot name="additional">
+                    {% block sw_page_slot_additional %}{% endblock %}
+                </slot>
                 <slot name="content">
                     {% block sw_page_slot_content %}{% endblock %}
                 </slot>
