--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.less
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.less
@@ -119,5 +119,16 @@
     .sw-page__content {
         height: 100%;
         position: relative;
+
+        &.is--split {
+            display: grid;
+            grid-template-columns: min-content 1fr;
+        }
+
+        .content__wrapper {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
