--- a/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.less
+++ b/Resources/administration/src/app/component/tree/sw-tree-item/sw-tree-item.less
@@ -86,6 +86,14 @@
         }
     }
 
+    &.is--active {
+        background: @sw-tree-item-color-background;
+        .sw-tree-item__icon,
+        .sw-tree-item__content {
+            color: @color-shopware-blue;
+        }
+    }
+
     .sw-tree-item__toggle {
         width: 24px;
         height: 24px;
