--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.less
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.less
@@ -1,23 +1,31 @@
 @import "~less/variables";
 
-.sw-category-detail {
+.sw-category {
+    .sw-category__content {
+        position: relative;
+        height: 100%;
+        width: 100%;
 
-    .sw-category-detail__active {
-        height: 45px;
-        border: 1px solid @color-steam-cloud;
-        border-radius: 4px;
-        margin-top: 24px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 16px;
-
-        .sw-field.sw-field--switch {
-            margin-bottom: -6px;
+        .sw-card-view .sw-card-view__content {
+            padding: 30px;
         }
     }
 
-    .sw-category-detail__subcategories.sw-field.sw-field--switch {
-        grid-template-columns: 24px 1fr;
+    // remove back button with css
+    .sw-page__back-btn-container {
+        display: none;
+    }
+
+    // class is added by the viewport observer
+    &.is--mobile {
+        &.has--category .sw-page__back-btn-container {
+            display: block;
+        }
+        .sw-page__content.is--split {
+            grid-template-columns: 1fr;
+        }
+        .sw-category-tree {
+            width: unset;
+        }
     }
 }
