NTR - fix rule condition save

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
@@ -9,7 +9,7 @@
     {% block sw_condition_fields_value %}
         <sw-field type="switch"
                   class="field field--main"
-                  v-model="condition.value.isNew" displayName="asdasd">
+                  v-model="condition.value.isNew">
         </sw-field>
     {% endblock %}
 {% endblock %}
