NEXT-1319 - Fix handling for assignment grid

--- a/Resources/administration/src/module/sw-configuration/component/sw-configuration-detail-base/sw-configuration-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-configuration/component/sw-configuration-detail-base/sw-configuration-detail-base.html.twig
@@ -7,11 +7,11 @@
     <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0 30px">
 
         <sw-field v-model="group.displayType" validation="required" type="select" :label="$tc('sw-configuration.detail.labelDisplayType')" >
-            <option slot="options" v-for="option in displayTypes" :value="option.value" :key="option.value">{{ option.label }}</option>
+            <option slot="options" v-for="option in displayTypes" :key="option.value" :value="option.value">{{ option.label }}</option>
         </sw-field>
 
         <sw-field v-model="group.sortingType" validation="required" type="select" :label="$tc('sw-configuration.detail.labelSortingType')" >
-            <option slot="options" v-for="option in sortingTypes" :value="option.value">{{ option.label }}</option>
+            <option slot="options" v-for="option in sortingTypes" :key="option.value" :value="option.value">{{ option.label }}</option>
         </sw-field>
     </sw-container>
 </sw-card>
