--- a/Resources/administration/src/app/component/base/sw-property-search/sw-property-search.less
+++ b/Resources/administration/src/app/component/base/sw-property-search/sw-property-search.less
@@ -1,24 +1,13 @@
 @import "~less/variables";
 
 .sw-property-search {
-    .sw-property-search__tree_selection {
+    .sw-property-search__tree-selection,
+    .sw-property-search__search-selection {
         width: 100%;
     }
 
-    .overlay .sw-property-search__tree_selection {
-        position: absolute;
-        z-index: @z-index-flyout;
-        border: 1px solid @color-steam-cloud;
-        border-radius: @border-radius-default;
-        background-color: @color-white;
-        box-shadow: 0 3px 6px 0 lighten(@color-steam-cloud, 30%);
-    }
-
-    .sw-property-search__search_selection {
-        width: 100%;
-    }
-
-    .overlay .sw-property-search__search_selection {
+    .overlay .sw-property-search__tree-selection,
+    .overlay .sw-property-search__search-selection{
         position: absolute;
         z-index: @z-index-flyout;
         border: 1px solid @color-steam-cloud;
@@ -31,7 +20,7 @@
         margin-bottom: 0;
     }
 
-     .sw-property-search__tree_selection .sw-property-search__tree_selection__group_grid {
+     .sw-property-search__tree-selection .sw-property-search__tree-selection__group_grid {
         border-right: 1px solid @color-steam-cloud;
     }
 }
