NEXT-1007 - rule design fixes

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -8,7 +8,7 @@
                         {% block sw_condition_container_children_spacer %}
                             <div v-if="index"
                                  class="condition-content__spacer--and">
-                                {{ $tc('global.sw-condition.condition.and') }}
+                                {{ $tc('global.sw-condition.condition.and').toUpperCase() }}
                             </div>
                         {% endblock %}
                         {% block sw_condition_container_children_component %}
