--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.less
@@ -173,7 +173,7 @@
       outline: none;
       box-shadow: none;
       border: 0 none;
-      padding: 7px 0;
+      padding: 7px 20px;
       background: @sw-condition-base-color-background;
       height: 42px;
     }
@@ -186,6 +186,7 @@
     }
 
     .sw-field__select select{
+      padding-left: 20px;
       &:active,
       &:focus {
         box-shadow: none;
