--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -8,7 +8,7 @@
             {% block sw_condition_container_children_spacer %}
             <div v-if="index"
                  class="condition-content__spacer--or">
-                {{ $tc('global.sw-condition.condition.or') }}
+                {{ $tc('global.sw-condition.condition.or').toUpperCase() }}
             </div>
             {% endblock %}
             {% block sw_condition_container_children_component %}
