--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
@@ -1,7 +1,7 @@
 @import "~less/variables";
 
 @sw-condition-or-container-background-even: @color-white;
-@sw-condition-or-container-background-odd: @color-light-gray;
+@sw-condition-or-container-background-odd: #F0F2F5;
 
 .sw-condition-or-container {
     &.container-condition-level__is--even {
@@ -20,13 +20,53 @@
         padding: 10px 0;
         margin-left: -10px;
         font-weight: bold;
+        display: inline-block;
+        position: relative;
+        width: calc(100% - 32px);
+
+        &:after {
+            content: "";
+            position: absolute;
+            border-top: 1px dashed #788A9B;
+            top: 50%;
+            width: 100%;
+            margin-left: 15px;
+        }
     }
 
     .sw-condition-or-container__actions {
         margin-top: 20px;
 
         .sw-condition-or-container__actions--or {
-            margin-right: 10px;
+            height: 32px;
+            border: 1px solid #D1D9E0;
+            border-radius: 4px;
+            padding: auto;
+
+            .sw-button__content {
+                color: #52667A;
+                font-size: 12px;
+                font-weight: 600;
+                line-height: 19px;
+                text-align: center;
+            }
+
+        }
+
+        .sw-condition-or-container__actions--sub {
+            height: 32px;
+            border: 1px solid #D1D9E0;
+            border-radius: 4px;
+            padding: auto;
+
+            .sw-button__content {
+                color: #52667A;
+                font-size: 12px;
+                font-weight: 600;
+                line-height: 19px;
+                text-align: center;
+            }
+
         }
 
         .sw-condition-or-container__actions--delete {
