--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -59,27 +59,34 @@
                             {% block sw_media_folder_item_additional_context_menu_slot %}{% endblock %}
                         </slot>
 
-                        {% block sw_media_media_item_context_group_quick_actions %}
+                        {% block sw_media_folder_item_context_group_quick_actions %}
                             <div class="defaultContextMenuClass">
-                                {% block sw_media_media_item_context_item_show_media %}
+
+                                {% block sw_media_folder_item_context_item_move %}
+                                    <sw-context-menu-item @click="openMoveModal">
+                                        {{ $tc('global.sw-media-folder-item.labelContextMenuMove') }}
+                                    </sw-context-menu-item>
+                                {% endblock %}
+
+                                {% block sw_media_folder_item_context_item_show_media %}
                                     <sw-context-menu-item @click="navigateToFolder">
                                         {{ $tc('global.sw-media-folder-item.labelContextMenuShowMedia') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
 
-                                {% block sw_media_media_item_context_item_show_settings %}
+                                {% block sw_media_folder_item_context_item_show_settings %}
                                     <sw-context-menu-item @click="openSettings">
                                         {{ $tc('global.sw-media-folder-item.labelContextMenuShowSettings') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
 
-                                {% block sw_media_media_item_context_item_dissolve %}
+                                {% block sw_media_folder_item_context_item_dissolve %}
                                     <sw-context-menu-item @click="openDissolveModal">
                                         {{ $tc('global.sw-media-folder-item.labelContextMenuDissolve') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
 
-                                {% block sw_media_media_item_context_item_rename_item %}
+                                {% block sw_media_folder_item_context_item_rename_item %}
                                     <sw-context-menu-item @click="onStartRenaming">
                                         {{ $tc('global.sw-media-folder-item.labelContextMenuRename') }}
                                     </sw-context-menu-item>
@@ -107,6 +114,16 @@
                     @sw-media-modal-folder-dissolve-items-dissolved="onFolderDissolved"
                     @sw-media-modal-folder-dissolve-close="closeDissolveModal">
             </sw-media-modal-folder-dissolve>
+        {% endblock %}
+
+        {% block sw_media_folder_move_modal %}
+            <sw-media-modal-move
+                v-if="showMoveModal"
+                :itemsToMove="[item]"
+                :parentFolderId="item.parentId"
+                @sw-media-modal-move-close="closeMoveModal"
+                @sw-media-modal-folder-settings-close="closeMoveModal">
+            </sw-media-modal-move>
         {% endblock %}
     </div>
 {% endblock %}
