--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-zip-code/sw-condition-shipping-zip-code.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-zip-code/sw-condition-shipping-zip-code.html.twig
@@ -12,10 +12,8 @@
         </sw-field>
     {% endblock %}
     {% block sw_condition_fields_value %}
-        <sw-condition-value multi
-                            :id="condition.id"
-                            class="field field--main field--multi"
-                            v-model="condition.value.zipCodes">
-        </sw-condition-value>
+        <sw-tagged-field class="field field--main field--multi"
+                         v-model="condition.value.zipCodes">
+        </sw-tagged-field>
     {% endblock %}
 {% endblock %}
